--- a/Android.SimpleWebViewClient/Android.SimpleWebViewClient.csproj
+++ b/Android.SimpleWebViewClient/Android.SimpleWebViewClient.csproj
@@ -4,8 +4,13 @@
     <TargetFramework>net8.0-android</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <Version>1.4.0</Version>
-    <Description>A simple WebViewClient for Android</Description>
+    <Authors>AlexSJC</Authors>
+    <Description>A simple WebViewClient for Android.</Description>
+    <Copyright>Copyright © $(Authors) $([System.DateTime]::Now.Year)</Copyright>
     <PackageIcon>Icon.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/SJC08/Android.SimpleWebViewClient</RepositoryUrl>
